# arch_labs

.github/: CODEOWNERS
lab1/: script1.sh  script2.sh
lab2/: CMakeLists.txt  client.cpp  logger.h  server.cpp
